# vsc-software-stack

./: README.md  clean-site-vub.sh  pod5-file-format-0.1.5_pybind_dep_fix.patch
102_krakenuniq/: jellyfish.eb  krakenuniq.eb  krakenuniq.eb.bak_20230320132025_3105902
104_KAT/: Autoconf-archive-2022.09.03-GCCcore-11.3.0.eb  KAT-2.4.2_fix-configure.patch  KAT-2021a.eb  KAT-2021b.eb  KAT.eb
108_OpenNMT-py/: CTranslate2-3.7.0_skip-thirdparty.patch  CTranslate2.eb  OpenNMT-py.eb  Tokenizer-1.37.1_fix-SentencePiece-SetVocabulary.patch  Tokenizer-1.37.1_use-sentencepiece-dependency.patch  Tokenizer.eb  cpu_features-0.7.0-GCCcore-11.3.0.eb  spdlog-1.11.0-GCCcore-11.3.0.eb
113_LoRDEC/: LoRDEC.eb
113_lordec/: BCALM-2.2.3-fix-nogit.patch  bcalm.eb  gatb.eb  lordec.eb  lordec_patch.patch
117_dice/: dice.eb.bak_20230323180757_1912867
118_AlphaFold/: AlphaFold-2.3.1-foss-2021b-CUDA-11.4.1.eb  AlphaFold-2.3.1.eb  OpenMM-7.5.1-foss-2021b-CUDA-11.4.1-DeepMind-patch.eb  OpenMM-8.0.0-foss-2022a-CUDA-11.7.0.eb
119_PopGen/: PopGen.eb  (+1 more)
39_alphapulldown/: AlphaPulldown-0.30.4_fix-deps.patch_orig  AlphaPulldown.eb  AlphaPulldown.eb.bak_20230505202841_2515964  Kalign-2.0.4-GCCcore-11.2.0.eb  OpenMM-7.7.0-foss-2021b.eb  alphapulldown.eb  alphapulldown.patch  cctbx-base.eb  cctbx-base_wheel.eb  kalign.eb  python.py  setup.cfg  setup.cfg_orig
39_alphapulldown/archive/: bootstrap_new.py  cctbx-base-pythonpath.patch
39_alphapulldown/new_toolchain/cctbx/: cctbx-base.eb
39_alphapulldown/old_toolchain/: alphapulldown.eb
39_alphapulldown/old_toolchain/cctbx/: cctbx-base.eb
(+1602 files in other folders)
