[metadata]
name = alphapulldown
version = 0.30.4
author = Dingquan Yu
author_email = dingquan.yu@embl-hamburg.de
description = Pipeline allows massive screening using alphafold
url = https://github.com/KosinskiLab/AlphaPulldown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
package_dir = 
	= src
include_package_data = True
python_requires = ==3.8.*
install_requires = 
	absl-py >= 0.10.0
	dm-haiku==0.0.4
 	dm-tree==0.1.5
	h5py==2.10.0
	matplotlib==3.3.3
	ml-collections==0.1.1
	numpy==1.19.4
	pandas==1.1.4
	tensorflow==2.4.1
	importlib-resources==5.12.0
	biopython==1.78
	nbformat==5.0.7
	py3Dmol==2.0.1.post1
	ipython
	tqdm
	appdirs
	jupyterlab
	ipywidgets
scripts = src/alphapulldown/create_individual_features.py, src/alphapulldown/run_multimer_jobs.py, src/analysis_pipeline/create_notebook.py, src/alphapulldown/rename_colab_search_a3m.py, src/alphapulldown/prepare_seq_names.py

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

